--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
-name: J. Luna Zagorac
+theme: jekyll-theme-modernist
+name: Liam T. Edwards
 markdown: kramdown
 ### Markdown Test
